# risk_warning

./: Credit Risk Benchmark Dataset (1) - Copy.csv  Credit_Risk_Scored_By_dlq2yrs.csv  README.md  app.py  credit_risk_model.pkl  credit_score_model.pkl  finance-credit-fraud.ipynb  main.py  predict_CIC.ipynb  pyproject.toml  risk_warning.py
