[project]
name = "risk-warning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "gradio>=5.44.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
]
