[project]
name = "risk-warning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "catboost>=1.2.8",
    "gradio>=5.44.1",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "xgboost>=2.0.0",
    "pydub>=0.25.1",
    "pygments>=2.19.2",
    "pyparsing>=3.2.3",
    "python-dateutil>=2.9.0",
    "python-multipart>=0.0.20",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "ruff>=0.12.12",
    "safehttpx>=0.1.6",
    "scipy>=1.15.3",
    "semantic-version>=2.10.0",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "starlette>=0.47.3",
    "tomlkit>=0.13.3",
    "tqdm>=4.67.1",
    "typer>=0.17.3",
    "typing-extensions>=4.15.0",
    "typing-inspection>=0.4.1",
    "tzdata>=2025.2",
    "urllib3>=2.5.0",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]
